# ex

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  deploy.bat  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  scan_c.ps1  start.bat  test_chat.js  tsconfig.json
.trae/rules/: project_rules.md
adapters/: README.md
adapters/miniprogram/: api-uni.js  api.js
adapters/qq-bot/: adapter.js  index.js
client/: index.html
client/css/: style.css
client/js/: api.js  chat.js
docs/: AI_Companion_NestJS.md  AI_Companion_Roadmap.md  AI_Companion_最终方案.md  Deployment_Guide.md  Docker_Deployment.md  Implementation_Plan.md  Learning_Notes.md  Project_Rules.md  QQ_Bot_Integration.md
python/: .dockerignore  .gitignore  Dockerfile  embedder.py  main.py  pyproject.toml
python/scripts/: download_model.py
shared/: types.ts
src/: app.module.ts  main.ts
src/characters/: characters.controller.ts  characters.module.ts  characters.service.ts
src/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
src/config/: database.config.ts
src/embedding/: embedding.module.ts  embedding.service.ts
src/emotion/: emotion.module.ts  jiwen-emotion.service.ts  mood.service.ts
src/llm/: llm.module.ts  llm.service.ts
src/memories/: memories.module.ts  memories.service.ts
src/messages/: messages.module.ts  (+2 more)
tools/: README_wechat_export.md  chat_converter.py  export_wechat_current_chat.bat  export_wechat_current_chat.ps1
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+148 files in other folders)
